--- a/blog_system/src/main/webapp/blog_edit.html
+++ b/blog_system/src/main/webapp/blog_edit.html
@@ -27,21 +27,22 @@
         <a href="blog_list.html">主页</a>
         <a href="blog_edit.html">写博客</a>
 
-        <a href="">注销</a>
+        <a href="logout">注销</a>
     </div>
 
     <!-- 博客编辑页版心 -->
     <div class="blog_edit_container">
-        <form action="">
+        <form action="blog" method="post">
 
             <!-- 标题编辑区 -->
             <div class="title">
-                <input type="text"id="title-input">
+                <input type="text" id="title-input" name="title">
                 <input type="submit" id="submit">
             </div>
             <!-- 博客编辑器 -->
             <!-- 把md编辑器放到这个div里面 -->
             <div id="editor">
+                <textarea name="content" style="display: none;"></textarea>
             </div>
         </form>
     </div>
@@ -57,7 +58,8 @@
             //编辑器中的初始内容
             markdown:"# 在这里写下一篇博客",
             //指定 editor.md 依赖的插件路径
-            path:"editor.md/lib/"
+            path:"editor.md/lib/",
+            saveHTMLToTextarea: ture
         });
         
         getLoginStatus();
